--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                <li class="social-item">
                 <a class="social-link" href>
                 <svg class="team-social-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram-2""></use>
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                 </a>
                </li>
