--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                  </div>
                 </div>
                  <div class="form-div">
-                 <label for="user_phone" class="label"> Phone
+                 <label for="user-phone" class="label"> Phone
                     </label>
                     <div class="input-icon">
                         <input type="tel" name="user-phone" id="user-phone" class="input-form">
