--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 <p class="subs-text">Subscribe</p>
                 <form class="subscription-form">
                     <label class="subs-label">
-                    <input type="email" name="email_subscribe" class="email-sub" placeholder="E-mail">
+                    <input type="email" name="email" class="email-sub" placeholder="E-mail">
                     </label>
                     <button type="submit" class="button-subsc">Subscribe
                  <svg width="24" height="24" class="paper">
