--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     </footer>
     <div class="modal-overlay">
         <div class="modal">
-            <button type="button" class="closing-button">
+            <button type="button" class="modal-close-btn">
                 <svg class="closing-icon" width="8" height="8">
                     <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
                 </svg>
