--- a/index.html
+++ b/index.html
@@ -355,11 +355,10 @@
     </footer>
     <div class="modal-overlay">
         <div class="modal">
-            <button type="button" class="modal-close-btn">
-                <svg class="closing-icon" width="8" height="8">
-                    <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
-                </svg>
-            </button>
+            <button type="button" class="close-button">
+          <svg width="8" height="8">
+<use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>          </svg>
+        </button>
             <p class="text-modal">Leave your contacts and we will call you back</p>
 
             <form class="form-class">
