--- a/index.html
+++ b/index.html
@@ -353,68 +353,91 @@
             </div>
         </div>
     </footer>
-    <div class="modal-overlay">
-        <div class="modal">
-            <button type="button" class="close-button">
-          <svg width="8" height="8">
-<use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>          </svg>
+     <div class="modal-overlay">
+      <div class="modal-form">
+        <button type="button" class="close-button">
+          <svg class="close-button-icon" width="8" height="8">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
         </button>
-            <p class="text-modal">Leave your contacts and we will call you back</p>
-
-            <form class="form-class">
-                <div class="form-div">
-                <label for="user-name" class="label">
-                    Name
-                </label>
-                <div class="input-icon">
-                 <input type="text" name="user-name" id="user-name" class="input-form">
-                 <svg width="18" height="24" class="name-icon">
-                    <use href="./images/icons.svg#icon-person-black-18dp-1-1"></use>
-                 </svg>
-                 </div>
-                </div>
-                 <div class="form-div">
-                 <label for="user-phone" class="label"> Phone
-                    </label>
-                    <div class="input-icon">
-                        <input type="tel" name="user-phone" id="user-phone" class="input-form">
-                        <svg width="18" height="24" class="name-icon">
-                        <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-                        </svg>
-                    </div>
-                 </div>
-                 <div class="form-div">
-                    <label for="user_email" class="label">
-                        Email
-                    </label>
-                    <div class="input-icon">
-                        <input type="email" id="user_email" name="user_email" class="input-form">
-                        <svg class="name-icon" width="18" height="24">
-                            <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
-                        </svg>
-                    </div>
-                 </div>
-                 <div class="comment-block">
-                    <label for="user-comment" class="label">
-                        Comment
-                    </label>
-                    <textarea id="user-comment" name="user-comment" placeholder="Text input" class="comment-input"></textarea>
-                 </div>
-<div class="checkbox-cont">
-                <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="visually-hidden">
-                <label for="user-privacy" class="accept">
-                  <span class="policy">
-                  <svg class="checkbox-icon" height="8" width="10" >
-                    <use href="./images/icons.svg#icon-icons8-checkmark"></use>
-                  </svg>
-                </span>  I accept the terms and conditions of the <a href="" class="posil">Privacy Policy</a>
-                </label>
+        <p class="form-title">Leave your contacts and we will call you back</p>
+        <form class="contact-form" name="contact_form">
+          <div class="form-label-container">
+            <label class="form-label" for="user-name">Name</label>
+            <div class="input-with-icon">
+              <input
+                class="form-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+                required
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#person"></use>
+              </svg>
             </div>
-            <button type="submit" class="button-send">Send
-            </button>
-            </form>
-            
-        </div>
+          </div>
+          <div class="form-label-container">
+            <label class="form-label" for="user-number">Phone</label>
+            <div class="input-with-icon">
+              <input
+                class="form-input"
+                type="tel"
+                name="user_number"
+                id="user-number"
+                required
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-label-container">
+            <label class="form-label" for="email">Email</label>
+            <div class="input-with-icon">
+              <input
+                class="form-input"
+                type="email"
+                name="user_email"
+                id="email"
+                required
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-comment-label-container">
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea
+              class="form-input comment"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="container-accept-terms">
+            <input
+              class="form-input-checkbox visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+              required
+            />
+            <label class="user-privacy-label" for="user-privacy">
+              <span class="check-span">
+                <svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="policy-file" href="" target="_blank">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="form-button" type="submit">Send</button>
+        </form>
+      </div>
     </div>
 </body>
 </html>
