--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       <div class="modal-form">
         <button type="button" class="close-button">
           <svg class="close-button-icon" width="8" height="8">
-            <use href="./images/icons.svg#close"></use>
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
         <p class="form-title">Leave your contacts and we will call you back</p>
@@ -373,7 +373,7 @@
                 required
               />
               <svg class="form-icon" width="18" height="24">
-                <use href="./images/icons.svg#person"></use>
+                <use href="./images/icons.svg#icon-person-black-18dp-1-1"></use>
               </svg>
             </div>
           </div>
@@ -388,7 +388,7 @@
                 required
               />
               <svg class="form-icon" width="18" height="24">
-                <use href="./images/icons.svg#phone"></use>
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </div>
           </div>
@@ -403,7 +403,7 @@
                 required
               />
               <svg class="form-icon" width="18" height="24">
-                <use href="./images/icons.svg#email"></use>
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
           </div>
@@ -428,7 +428,7 @@
             <label class="user-privacy-label" for="user-privacy">
               <span class="check-span">
                 <svg class="check-icon" width="10" height="8">
-                  <use href="./images/icons.svg#check"></use>
+                  <use href="./images/icons.svg#icon-icons8-checkmark"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
